--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "Karting Dashboard",
-  "short_name": "KartDash",
+  "short_name": "Kart Dash",
   "description": "Suivez vos performances sur circuit",
-  "start_url": "./",
+  "start_url": "./?v=4.1",
   "display": "standalone",
   "background_color": "#0a0a0a",
   "theme_color": "#667eea",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "./icon-192.png?v=4.1",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icon-512.png",
+      "src": "./icon-512.png?v=4.1",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
